
Changes in libuca 0.5.0
-----------------------

- Put work under LGPL 2.1

- Adapt cameras/ipe.c to support the current driver API

- API changes
    - new enum type uca_buffer_status
    - uca_cam_grab_callback()s have to return uca_buffer_status
    - typedef all types

- New symbols:
    - uca_cam_release_buffer()
    